# agent-vitals

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
agent_vitals/: __init__.py  backtest.py  ci_gate.py  config.py  exceptions.py  monitor.py  schema.py  thresholds.yaml
agent_vitals/adapters/: __init__.py  autogen.py  base.py  crewai.py  dspy.py  haystack.py  langchain.py  langfuse.py  langgraph.py  langsmith.py
agent_vitals/callbacks/: __init__.py  langchain.py  langgraph.py
agent_vitals/detection/: __init__.py  adaptive_threshold.py  cusum.py  loop.py  metrics.py  similarity.py  stop_rule.py
agent_vitals/export/: __init__.py  jsonl.py  otlp.py
checkpoints/vitals_corpus/av05_synth/: labels.json  manifest.json  scenario_coverage_matrix.json  scenario_coverage_matrix.md
checkpoints/vitals_corpus/av05_synth/traces/: AV04.SYNTH.s0.burn_rate_anomaly.0000.jsonl  AV04.SYNTH.s0.confabulation_mild.0000.jsonl  AV04.SYNTH.s0.confabulation_moderate.0000.jsonl  AV04.SYNTH.s0.confabulation_severe.0000.jsonl  AV04.SYNTH.s0.healthy.0000.jsonl  AV04.SYNTH.s0.loop_plateau.0000.jsonl  AV04.SYNTH.s0.loop_refinement_cycle.0000.jsonl  AV04.SYNTH.s0.mixed.0000.jsonl  (+45 more)
checkpoints/vitals_corpus/av26_real/: labels.json  manifest.json
checkpoints/vitals_corpus/av31_reviewed/: labels.json
scripts/: ci_backtest.py
tests/: conftest.py  test_adapter_langfuse.py  test_adapter_langsmith.py  test_adapter_matrix.py  test_adapters.py  test_adaptive_threshold.py  test_autogen_adapter.py  test_backtest.py  test_callbacks.py  test_ci_gate.py  test_confabulation_ratio_integration.py  test_config.py  test_crewai_adapter.py  test_cusum.py  test_cusum_integration.py  test_detection_loop.py  test_detection_metrics.py  test_detection_similarity.py  test_detection_stop_rule.py  test_dspy_adapter.py  test_export.py  test_haystack_adapter.py  test_integration.py  test_langgraph_node.py  test_monitor.py  test_otlp_export.py  test_schema.py  test_similarity_integration.py  test_threshold_profiles.py
tests/fixtures/: snapshot_healthy.json
(+66 files in other folders)
